[SEC-5] - Create secur-auth microservice project in Intellij
Created project stucture

-changed package name

--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.2.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>ro.fortech</groupId>
-	<artifactId>secur.auth</artifactId>
+	<groupId>ro.secur</groupId>
+	<artifactId>auth</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>secur.auth</name>
+	<name>auth</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
