--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>3.8.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
