--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth
 spring.datasource.username=root
 spring.datasource.password=password
+
+spring.liquibase.change-log=classpath:/database/changelog-auth.xml
+logging.level.liquibase=DEBUG
