[SEC-29] Create Profiles for secur-auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth
-spring.datasource.username=root
-spring.datasource.password=password
+spring.profiles.active=local
 
 spring.liquibase.change-log=classpath:/database/changelog-auth.xml
 logging.level.liquibase=DEBUG
