--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth
+spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 
-spring.liquibase.change-log=classpath:/database/changelog-auth.xml
-logging.level.liquibase=DEBUG
+#spring.liquibase.change-log=classpath:/database/changelog-auth.xml
+#logging.level.liquibase=DEBUG
