--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNot
 spring.datasource.username=root
 spring.datasource.password=password
 
-#spring.liquibase.change-log=classpath:/database/changelog-auth.xml
-#logging.level.liquibase=DEBUG
+spring.liquibase.change-log=classpath:/database/changelog-auth.xml
+logging.level.liquibase=DEBUG
