--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth
+spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
