--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth
 spring.datasource.username=root
 spring.datasource.password=password
+
+logging.level.liquibase=DEBUG
