--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>auth</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>auth</name>
-	<description>Authorization sproject</description>
+	<description>Authorization project</description>
 
 	<properties>
 		<java.version>11</java.version>
