--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,11 @@
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 
 logging.level.liquibase=DEBUG
+
+#jwt
+application.jwt.secretkey=madkagdfgkjfhjrkojiurgoijdsgjkldfgdislfjspfo[fasdkfodkgdosmgbakw[pfkb
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationDays=14
