--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -9,3 +9,9 @@ logging.level.liquibase=DEBUG
 application.jwt.secretkey=madkagdfgkjfhjrkojiurgoijdsgjkldfgdislfjspfo[fasdkfodkgdosmgbakw[pfkb
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationDays=14
+
+
+
+#microservice name
+spring.application.name=secur-auth
+
