--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=WondersHappen-23
 
 logging.level.liquibase=DEBUG
