[Sec-17] Tentativa 4 - refactor

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,14 +3,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNot
 spring.datasource.username=root
 spring.datasource.password=password
 
+#liquidbase
 logging.level.liquibase=DEBUG
 
 #jwt
 application.jwt.secretkey=madkagdfgkjfhjrkojiurgoijdsgjkldfgdislfjspfo[fasdkfodkgdosmgbakw[pfkb
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationDays=14
-
-
 
 #microservice name
 spring.application.name=secur-auth
