[Sec-17] LoginFunctionality added.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,11 +6,15 @@ spring.datasource.password=password
 #liquidbase
 logging.level.liquibase=DEBUG
 
-#jwt
+#filter
 application.jwt.secretkey=madkagdfgkjfhjrkojiurgoijdsgjkldfgdislfjspfo[fasdkfodkgdosmgbakw[pfkb
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationDays=14
 
 #microservice name
 spring.application.name=secur-auth
+
+
+
+
 
