[Sec-17] LoginFunctionality added. #Fix 1

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -14,6 +14,10 @@ application.jwt.tokenExpirationDays=14
 #microservice name
 spring.application.name=secur-auth
 
+#basePath for all urls
+spring.mvc.servlet.path=/api/v1
+
+
 
 
 
