[SEC-33] Change database schema

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,6 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNot
 spring.datasource.username=root
 spring.datasource.password=password
 
+#TestData
+spring.datasource.platform=mysql
+spring.datasource.data=database/testdata/data.sql
+
 #liquidbase
 logging.level.liquibase=DEBUG
 
