[SEC-33] Change database schema

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,8 +4,13 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 #TestData
-spring.datasource.platform=mysql
 spring.datasource.data=database/testdata/data.sql
+spring.datasource.initialization-mode=always
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.platform=mysql
+
+
 
 #liquidbase
 logging.level.liquibase=DEBUG
