--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8085
 spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
@@ -17,6 +17,8 @@ spring.application.name=secur-auth
 #basePath for all urls
 spring.mvc.servlet.path=/api/v1
 
+# eureka security
+eureka.client.serviceUrl.defaultZone=http://eurekasecuredusername:eurekasecuredpassword@localhost:8761/eureka
 
 
 
