[SEC-44] eureka security (#14)
* [SEC-44] eureka security

* [SEC-44] eureka security

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -17,6 +17,8 @@ spring.application.name=secur-auth
 #basePath for all urls
 spring.mvc.servlet.path=/api/v1
 
+# eureka security
+eureka.client.serviceUrl.defaultZone=http://eurekasecuredusername:eurekasecuredpassword@localhost:8761/eureka
 
 
 
