--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -20,6 +20,8 @@ spring.mvc.servlet.path=/api/v1
 
 # eureka security
 eureka.client.serviceUrl.defaultZone=http://eurekasecuredusername:eurekasecuredpassword@localhost:8761/eureka
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 
 
 
