--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -21,5 +21,8 @@ spring.mvc.servlet.path=/api/v1
 # eureka security
 eureka.client.serviceUrl.defaultZone=http://eurekasecuredusername:eurekasecuredpassword@localhost:8761/eureka
 
-
-
+# cross origin
+cross.accessControlAllowOrigin=http://localhost:3000
+cross.accessControlAllowMethods=POST, GET, OPTIONS, DELETE, PUT
+cross.accessControlAllowHeaders=Access-Control-Allow-Headers, Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With
+cross.accessControlExposeHeaders=*
