[SEC-88] Expiration Policy forgot password

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,6 +12,14 @@ application.jwt.secretkey=madkagdfgkjfhjrkojiurgoijdsgjkldfgdislfjspfo[fasdkfodk
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationDays=2
 
+#reset password token
+reset.password.tokenExpirationTime=3
+
+#email
+email.configuration.emailAddress=fortechSecur@gmail.com
+email.configuration.emailPassword=askllksa%1
+email.configuration.host=smtp.gmail.com
+
 #microservice name
 spring.application.name=secur-auth
 
