[SEC-88] Expiration Policy forgot password

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -19,6 +19,7 @@ reset.password.tokenExpirationTime=3
 email.configuration.emailAddress=fortechSecur@gmail.com
 email.configuration.emailPassword=askllksa%1
 email.configuration.host=smtp.gmail.com
+email.configuration.port=587
 
 #microservice name
 spring.application.name=secur-auth
