--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,17 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.0.1</version>
+		</dependency>
     </dependencies>
 
 	<dependencyManagement>
