--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -25,7 +25,8 @@ email.configuration.port=587
 spring.application.name=secur-auth
 
 #basePath for all urls
-spring.mvc.servlet.path=/api/v1
+#spring.mvc.servlet.path=/api/v1
+server.servlet.context-path=/api/v1
 
 # eureka security
 eureka.client.serviceUrl.defaultZone=http://eurekasecuredusername:eurekasecuredpassword@localhost:8761/eureka
