[SEC-90] Swagger Final Config.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,7 +4,7 @@ server.port=8081
 #microservice name
 spring.application.name=secur-auth
 
-#basePath for all urls
+#basePath for all urls (conflict with swagger)
 #spring.mvc.servlet.path=/api/v1
 #server.servlet.context-path=/api/v1
 
