--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,9 @@
+# ===================================================================
+# SPRING BOOT PROPERTIES REFERENCE
+# https://docs.spring.io/spring-boot/docs/2.0.4.RELEASE/reference/html/common-application-properties.html
+# https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
+# ===================================================================
+
 #server
 server.port=8081
 
