--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,13 +1,31 @@
+# ===================================================================
+# SPRING BOOT PROPERTIES REFERENCE
+# https://docs.spring.io/spring-boot/docs/2.0.4.RELEASE/reference/html/common-application-properties.html
+# https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
+# ===================================================================
+
+#server
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=password
+
+#microservice name
+spring.application.name=secur-auth
+
+#basePath for all urls (conflict with swagger)
+#spring.mvc.servlet.path=/api/v1
+#server.servlet.context-path=/api/v1
+
+#eureka security
+eureka.client.serviceUrl.defaultZone=http://eurekasecuredusername:eurekasecuredpassword@localhost:8761/eureka
 
 #liquidbase
 logging.level.liquibase=DEBUG
 
+#springData
+spring.datasource.url=jdbc:mysql://localhost:3306/secur_auth?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=password
 
-#filter
+#jwtFilter
 application.jwt.secretkey=madkagdfgkjfhjrkojiurgoijdsgjkldfgdislfjspfo[fasdkfodkgdosmgbakw[pfkb
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationDays=2
@@ -21,17 +39,10 @@ email.configuration.emailPassword=askllksa%1
 email.configuration.host=smtp.gmail.com
 email.configuration.port=587
 
-#microservice name
-spring.application.name=secur-auth
-
-#basePath for all urls
-spring.mvc.servlet.path=/api/v1
-
-# eureka security
-eureka.client.serviceUrl.defaultZone=http://eurekasecuredusername:eurekasecuredpassword@localhost:8761/eureka
-
-# cross origin
+#cross origin
 cross.accessControlAllowOrigin=http://localhost:3000
 cross.accessControlAllowMethods=POST, GET, OPTIONS, DELETE, PUT
 cross.accessControlAllowHeaders=Access-Control-Allow-Headers, Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With
 cross.accessControlExposeHeaders=*
+
+
